--- a/project/Binf/container.html
+++ b/project/Binf/container.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Container</title>
+    <title>CountMeIn</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
 </head>
 <body>
     <div id='container'>
-        something
+        
     </div>
 </body>
 </html>
