--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -26,11 +26,12 @@
             <input type="text" id="registration-age" />
             <br />
             <label for="registration-interests">Interests</label>
-            <textarea id="registration-interests" cols="30" rows="10"></textarea>
+            <textarea id="registration-interests" cols="20" rows="5"></textarea>
             <br />
             <label for="registration-photo">Upload Photo</label>
             <input type="file" id="registration-photo" />
             <br />
+            <button id="registration-submit">Submit</button>
         </section>
     </div>
 </body>
