Added files to VS and styles to main

--- a/project/Binf/MainPage.html
+++ b/project/Binf/MainPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>CountMeIn</title>
-    <link href="styles/mainPageStyleSheet.css" rel="stylesheet" />
+    <link href="styles/styles-main.css" rel="stylesheet" />
+    <link href="styles/styles-container.css" rel="stylesheet" />
 </head>
 <body>
     <div id='container'>
