--- a/project/Binf/LogIn.html
+++ b/project/Binf/LogIn.html
@@ -8,9 +8,13 @@
 <body>
     <div id='container'>
         <div id="logIn">
-            <input type="text" placeholder="Your name" />
+            <h1>Log in</h1>
             <br />
-            <input type="password" placeholder="Your password" />
+            <label for="login-nickname">Nickname</label>
+            <input type="text" placeholder="Your name" id="login-nickname"/>
+            <br />
+            <label for="login-password">Password</label>
+            <input type="password" placeholder="Your password" id="login-password"/>
         </div>
     </div>
 </body>
