--- a/project/Binf/LogIn.html
+++ b/project/Binf/LogIn.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <titleLog In</title>
-    <link href="styles/mainPageStyleSheet.css" rel="stylesheet" />
+    <link href="styles/styles-main.css" rel="stylesheet" />
+    <link href="styles/styles-container.css" rel="stylesheet" />
 </head>
 <body>
     <div id='container'>
@@ -11,10 +12,10 @@
             <h1>Log in</h1>
             <br />
             <label for="login-nickname">Nickname</label>
-            <input type="text" placeholder="Your name" id="login-nickname"/>
+            <input type="text" id="login-nickname"/>
             <br />
             <label for="login-password">Password</label>
-            <input type="password" placeholder="Your password" id="login-password"/>
+            <input type="password" id="login-password"/>
         </div>
     </div>
 </body>
