login and signup names

--- a/project/Binf/MainPage.html
+++ b/project/Binf/MainPage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id='container'>
-        <div id="logIn">
+        <div id="log-in">
             Log In
         </div>
-        <div id="signUp">
+        <div id="sign-up">
             Sign Up
         </div>
     </div>
