--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div id='container'>
-        <h1>Registration</h1>
-        <section id="registration-content">
+        <div id="registration-title">
+            <h1>Registration</h1>
+        </div>
+        <div id="registration-content">
             <label for="registration-nickname">Nickname</label>
             <input type="text" id="registration-nickname" />
             <br />
@@ -32,7 +34,7 @@
             <input type="file" id="registration-photo" />
             <br />
             <button id="registration-submit">Submit</button>
-        </section>
+        </div>
     </div>
 </body>
 </html>
