--- a/project/Binf/LogIn.html
+++ b/project/Binf/LogIn.html
@@ -5,10 +5,11 @@
     <titleLog In</title>
     <link href="styles/styles-main.css" rel="stylesheet" />
     <link href="styles/styles-container.css" rel="stylesheet" />
+    <link href="styles/styles-login.css" rel="stylesheet" />
 </head>
 <body>
     <div id='container'>
-        <div id="logIn">
+        <div id="log-in">
             <h1>Log in</h1>
             <br />
             <label for="login-nickname">Nickname</label>
