Main page button and colors

--- a/project/Binf/MainPage.html
+++ b/project/Binf/MainPage.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div id='container'>
-        <div id="log-in">
+        <div>
+            <h1>CountMeIn</h1>
+        </div>
+        <button id="main-log-in">
             Log In
-        </div>
-        <div id="sign-up">
+        </button>
+        <button id="main-sign-up">
             Sign Up
-        </div>
+        </button>
     </div>
 </body>
 </html>
