--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CountMeIn</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
-    <link rel="stylesheet" tyoe="text" href="styles/styles-registration.css">
+    <link rel="stylesheet" type="text" href="styles/styles-registration.css">
 </head>
 <body>
     <div id='container'>
