Added table to registration

--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -12,28 +12,76 @@
             <h1>Registration</h1>
         </div>
         <div id="registration-content">
-            <label for="registration-nickname">Nickname</label>
-            <input type="text" id="registration-nickname" />
-            <br />
-            <label for="registration-email">E-mail</label>
-            <input type="email" id="registration-email" />
-            <br />
-            <label for="registration-password">Password</label>
-            <input type="password" id="registration-password" />
-            <br />
-            <label for="registration-gender">Gender</label>
-            <input type="text" id="registration-gender" />
-            <br />
-            <label for="registration-age">Age</label>
-            <input type="text" id="registration-age" />
-            <br />
-            <label for="registration-interests">Interests</label>
-            <textarea id="registration-interests" cols="20" rows="5"></textarea>
-            <br />
-            <label for="registration-photo">Upload Photo</label>
-            <input type="file" id="registration-photo" />
-            <br />
-            <button id="registration-submit">Submit</button>
+            <table>
+                <tr>
+                    <td>
+                        <label for="registration-nickname">Nickname</label>
+                    </td>
+                    <td>
+                        <input type="text" id="registration-nickname" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-email">E-mail</label>
+                    </td>
+                    <td>
+                        <input type="email" id="registration-email" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-password">Password</label>
+                    </td>
+                    <td>
+                        <input type="password" id="registration-password" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-gender">Gender</label>
+                    </td>
+                    <td>
+                        <input type="text" id="registration-gender" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-age">Age</label>
+                    </td>
+                    <td>
+                        <input type="text" id="registration-age" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-interests">Interests</label>
+                    </td>
+                    <td>
+                        <textarea id="registration-interests" cols="20" rows="5"></textarea>
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="registration-photo">Upload Photo</label>
+                    </td>
+                    <td>
+                        <input type="file" id="registration-photo" />
+                        <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button id="registration-submit">Submit</button>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
