--- a/project/Binf/LogIn.html
+++ b/project/Binf/LogIn.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <titleLog In</title>
+    <title>Log In</title>
     <link href="styles/styles-main.css" rel="stylesheet" />
     <link href="styles/styles-container.css" rel="stylesheet" />
     <link href="styles/styles-login.css" rel="stylesheet" />
@@ -17,6 +17,8 @@
             <br />
             <label for="login-password">Password</label>
             <input type="password" id="login-password"/>
+            <br />
+            <input type="button"  value="Count me in !"/>
         </div>
     </div>
 </body>
