top menu, bottom menu, main content css

--- a/project/Binf/bottom-menu.html
+++ b/project/Binf/bottom-menu.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>CountMeIn</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
-    <link rel="stylesheet" tyoe="text" href="styles/styles-registration.css">
+    <link rel="stylesheet" tyoe="text" href="styles/styles-bottom-menu.css">
 </head>
 <body>
-    <div id='container'></div>
+    <div id="container">
+        <div id="top-menu"></div>
+        <div id="main-content"></div>
+        <div id="bottom-menu"></div>
+    </div>
 </body>
 </html>
