bottom-menu styles

--- a/project/Binf/bottom-menu.html
+++ b/project/Binf/bottom-menu.html
@@ -10,7 +10,13 @@
     <div id="container">
         <div id="top-menu"></div>
         <div id="main-content"></div>
-        <div id="bottom-menu"></div>
+        <div id="bottom-menu">
+            <button class="bottom-menu-button">ON</button>
+            <button class="bottom-menu-button">IMG</button>
+            <button class="bottom-menu-button">IMG</button>
+            <button class="bottom-menu-button">IMG</button>
+            <button class="bottom-menu-button">IMG</button>
+        </div>
     </div>
 </body>
 </html>
