main-content page

--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <title>CountMeIn</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
-    <link rel="stylesheet" tyoe="text" href="styles/styles-bottom-menu.css">
 </head>
 <body>
     <div id="container">
-        <div id="top-menu"></div>
+        <div id="top-menu">
+            <img src="images/placeholder.png" id="target-profile-picture" />
+            <div id="target-info">
+                <p id="target-main-info">epitsin, Female, age 22</p>
+                <p id="target-interests"><strong>Likes: </strong>Programming, Sport, Computer Games, Belot</p>
+            </div>
+        </div>
         <div id="main-content"></div>
         <div id="bottom-menu">
             <button class="bottom-menu-button">ON</button>
