--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -17,10 +17,10 @@
         <div id="main-content"></div>
         <div id="bottom-menu">
             <button class="bottom-menu-button">ON/OFF</button>
-            <button class="bottom-menu-button">IMG</button>
-            <button class="bottom-menu-button">IMG</button>
-            <button class="bottom-menu-button">IMG</button>
-            <button class="bottom-menu-button">IMG</button>
+            <button class="bottom-menu-button">UPDATE STATUS</button>
+            <button class="bottom-menu-button">SEARCH</button>
+            <button class="bottom-menu-button">MESSAGES</button>
+            <button class="bottom-menu-button">SETTINGS</button>
         </div>
     </div>
 </body>
