Search Page fixes

--- a/project/Binf/SearchPage.html
+++ b/project/Binf/SearchPage.html
@@ -34,6 +34,22 @@
                         </select>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <label for="search-age">Age</label>
+                    </td>
+                    <td>
+                        <input type="text" id="search-age" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="search-interests">Interests</label>
+                    </td>
+                    <td>
+                        <textarea id="search-interests"></textarea>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
