main page css changed

--- a/project/Binf/MainPage.html
+++ b/project/Binf/MainPage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id='container'>
-        <div>
+        <div id="title">
             <h1>CountMeIn</h1>
         </div>
         <button id="main-log-in">
