some names changed

--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CountMeIn</title>
+    <title>Registration</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
     <link rel="stylesheet" type="text" href="styles/styles-registration.css">
 </head>
