submit photo button

--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -66,7 +66,7 @@
                         <label for="registration-photo">Upload Photo</label>
                     </td>
                     <td>
-                        <input type="file" id="registration-photo" />
+                        <input type="file" id="registration-photo" value="Choose" />
                     </td>
                 </tr>
             </table>
