added map functionality

--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>CountMeIn</title>
     <link rel="stylesheet" type="text" href="styles/styles-container.css" />
+    <script type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_7qQ8UYP2U3tjS3WcsUcN7DgeyYrE0fY">
+    </script>
 </head>
 <body>
     <div id="container">
@@ -14,7 +17,9 @@
                 <p id="target-interests"><strong>Likes: </strong>Programming, Sport, Computer Games, Belot</p>
             </div>
         </div>
-        <div id="main-content"></div>
+        <div id="main-content">
+        </div>
+        <script src="scripts/mapsAPI.js"></script>
         <div id="bottom-menu">
             <button class="bottom-menu-button">ON/OFF</button>
             <button class="bottom-menu-button">UPDATE STATUS</button>
