--- a/project/Binf/SearchPage.html
+++ b/project/Binf/SearchPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
   <meta charset="UTF-8">
@@ -51,6 +51,7 @@
                     </td>
                 </tr>
             </table>
+            <button id="search-button">Search</button>
         </div>
     </div>
 </body>
