--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -13,7 +13,7 @@
         <div id="top-menu">
             <img src="images/placeholder.png" id="target-profile-picture" />
             <div id="target-info">
-                <p id="target-main-info">epitsin, Female, age 21</p>
+                <p id="target-main-info"><strong>Profile: </strong>epitsin, Female, age 21</p>
                 <p id="target-interests"><strong>Likes: </strong>Programming, Sport, Computer Games, Belot</p>
             </div>
         </div>
