--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -21,11 +21,11 @@
         </div>
         <script src="scripts/mapsAPI.js"></script>
         <div id="bottom-menu">
-            <button class="bottom-menu-button">ON/OFF</button>
-            <button class="bottom-menu-button">UPDATE STATUS</button>
-            <button class="bottom-menu-button">SEARCH</button>
-            <button class="bottom-menu-button">MESSAGES</button>
-            <button class="bottom-menu-button">SETTINGS</button>
+            <button class="bottom-menu-button"><img src="images/on.png"/></button>
+            <button class="bottom-menu-button"><img src="images/status.png"/></button>
+            <button class="bottom-menu-button"><img src="images/search.png"/></button>
+            <button class="bottom-menu-button"><img src="images/messages.png"/></button>
+            <button class="bottom-menu-button"><img src="images/settings.png"/></button>
         </div>
         <script id="people-template" type='text/x-handlebars-template'>
             <p id="target-main-info"><strong>Profile: </strong>{{nickname}}, {{age}}, {{gender}}</p>
