changed selected menu

--- a/project/Binf/registration.html
+++ b/project/Binf/registration.html
@@ -42,7 +42,10 @@
                         <label for="registration-gender">Gender</label>
                     </td>
                     <td>
-                        <input type="text" id="registration-gender" />
+                        <select id="search-gender" onselect="Choose">
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
