postActivity row 26 id mismatch fixed

--- a/project/Binf/postActivity.html
+++ b/project/Binf/postActivity.html
@@ -23,7 +23,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label for="post-hours">Hours</label>
+                        <label for="post-from-hours">Hours</label>
                     </td>
                     <td class="special">
                         From: <input type="number" id="post-from-hours" />
