--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -28,8 +28,9 @@
             <button class="bottom-menu-button"><img src="images/settings.png"/></button>
         </div>
         <script id="people-template" type='text/x-handlebars-template'>
-            <p id="target-main-info"><strong>Profile: </strong>{{nickname}}, {{age}}, {{gender}}</p>
-            <p id="target-interests"><strong>Likes: </strong>{{interests}}</p>
+            <p id="target-main-info"><strong>Activity: </strong>{{activity}}</p>
+            <p id="target-interests"><strong>From: </strong>{{from}}</p>
+            <p id="target-interests"><strong>To: </strong>{{to}}</p>
         </script>
     </div>
 </body>
