--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -29,8 +29,8 @@
         </div>
         <script id="people-template" type='text/x-handlebars-template'>
             <p id="target-main-info"><strong>Activity: </strong>{{activity}}</p>
-            <p id="target-interests"><strong>From: </strong>{{from}}</p>
-            <p id="target-interests"><strong>To: </strong>{{to}}</p>
+            <p id="target-from"><strong>From: </strong>{{from}}</p>
+            <p id="target-to"><strong>To: </strong>{{to}}</p>
         </script>
     </div>
 </body>
