--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -3,35 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>CountMeIn</title>
-    <link rel="stylesheet" type="text" href="styles/styles-container.css" />
+    <link rel="stylesheet" type="text" href="styles/styles-container.css"/>
+    <script src="libs/jquery-2.1.1.min.js"></script>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_7qQ8UYP2U3tjS3WcsUcN7DgeyYrE0fY">
     </script>
     <script src="scripts/handlebars.js"></script>
-    <script src="scripts/people.js"></script>
+    <!--<script src="scripts/people.js"></script>-->
 </head>
 <body>
-    <div id="container">
-        <div id="top-menu">
-            <img src="images/placeholder.png" id="target-profile-picture" />
+<div id="container">
+    <div id="top-menu">
+        <div id="event-info">
+            <img src="images/placeholder.png" id="target-profile-picture"/>
+
             <div id="target-info">
+                <p id="target-main-info"><strong>Activity: </strong></p>
+
+                <p id="target-from"><strong>From: </strong></p>
+
+                <p id="target-to"><strong>To: </strong></p>
             </div>
         </div>
-        <div id="main-content">
-        </div>
-        <script src="scripts/mapsAPI.js"></script>
-        <div id="bottom-menu">
-            <button class="bottom-menu-button"><img src="images/on.png"/></button>
-            <button class="bottom-menu-button"><img src="images/status.png"/></button>
-            <button class="bottom-menu-button"><img src="images/search.png"/></button>
-            <button class="bottom-menu-button"><img src="images/messages.png"/></button>
-            <button class="bottom-menu-button"><img src="images/settings.png"/></button>
-        </div>
-        <script id="people-template" type='text/x-handlebars-template'>
-            <p id="target-main-info"><strong>Activity: </strong>{{activity}}</p>
-            <p id="target-from"><strong>From: </strong>{{from}}</p>
-            <p id="target-to"><strong>To: </strong>{{to}}</p>
-        </script>
     </div>
+    <div id="main-content">
+    </div>
+    <script src="scripts/mapsAPI.js"></script>
+    <div id="bottom-menu">
+        <button class="bottom-menu-button"><img src="images/on.png"/></button>
+        <button class="bottom-menu-button"><img src="images/status.png"/></button>
+        <button class="bottom-menu-button"><img src="images/search.png"/></button>
+        <button class="bottom-menu-button"><img src="images/messages.png"/></button>
+        <button class="bottom-menu-button"><img src="images/settings.png"/></button>
+    </div>
+    <!--<script id="people-template" type='text/x-handlebars-template'>-->
+    <!--<p id="target-main-info"><strong>Activity: </strong>{{activity}}</p>-->
+    <!--<p id="target-from"><strong>From: </strong>{{from}}</p>-->
+    <!--<p id="target-to"><strong>To: </strong>{{to}}</p>-->
+    <!--</script>-->
+</div>
 </body>
 </html>
