--- a/project/Binf/main-content.html
+++ b/project/Binf/main-content.html
@@ -14,9 +14,9 @@
 <body>
 <div id="container">
     <div id="top-menu">
+        <div id="no-activity-selected"><h2>Pick an activity :)</h2></div>
         <div id="event-info">
-            <img src="images/placeholder.png" id="target-profile-picture"/>
-
+            <img src="" id="target-profile-picture"/>
             <div id="target-info">
                 <p id="target-main-info"><strong>Activity: </strong></p>
 
